--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 psycopg2==2.8.4
+pycoingecko==2.2.0
 PyJWT==2.3.0
 python-dotenv==0.15.0
 pytz==2021.3
